# SetupMover

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  RELEASE.md  ROADMAP.md  cli.py  iRacing Setup Manager.spec  iracing_setup_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
core/: config.py  formats.py  paths.py  planner.py
data/: default_aliases.py  iracing_folders.py
gui/: app.py  tab_alias.py  tab_copy.py  theme.py  widgets.py
tests/: test_cli.py  test_execute_copy_plan.py  test_formats_hypothesis.py  test_iracing_setup_manager.py
