[project]
name = "iracing-setup-manager"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.0"]
build = ["pyinstaller>=6.8"]

[project.scripts]
iracing-setup-manager = "iracing_setup_manager:main"

[tool.setuptools.packages.find]
include = ["core*", "data*", "gui*"]

[tool.setuptools]
py-modules = ["cli", "iracing_setup_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
